# go-tree-sitter

./: CMakeLists.txt  parser.c  vendor.sh
cpp/: binding_test.go  scanner.cc
csharp/: binding_test.go  scanner.c
python/: binding.go
typescript/typescript/: binding_test.go
vue/: binding.go  binding_test.go  html_scanner.cc  scanner.cc
xml/: binding.go  binding_test.go  parser.c  scanner.c  scanner.h
